# ai-madness-auth-demo

./: .cursorrules  .gitignore  API_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  FRONTEND_OAUTH_SCOPE_UPDATE.md  IDEAS  IMPLEMENTATION_PLAN.md  Makefile  OAUTH_SCOPE_MIGRATION.md  OAUTH_SETUP.md  README.md  docker-compose.yml  migrate_scope.py  setup_oauth.py
backend/: .gitignore  ARCHITECTURE_PLAN.md  Dockerfile  Dockerfile.dev  GSSAPI_README.md  Makefile  README.md  REFACTORING_SUMMARY.md  app.py  app_new.py  debug_auth.py  jwt.py  migrate_to_auth_engine.py  model.py  oauth.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_config.py  test_config_debug.py  test_gssapi.py  wsgi.py
backend/ai_auth_backend/: __init__.py  app.py  cli.py  models.py
backend/ai_auth_backend/auth_engine/: __init__.py  exceptions.py
backend/ai_auth_backend/auth_engine/api/: admin.py  auth.py  oauth.py
backend/ai_auth_backend/auth_engine/core/: config.py  engine.py  services.py
backend/ai_auth_backend/auth_engine/middleware/: __init__.py  auth.py  session.py
backend/ai_auth_backend/auth_engine/models/: oauth.py  user.py
backend/ai_auth_backend/auth_engine/providers/: oauth.py  password.py
backend/app/: __init__.py  jwt.py  model.py  oauth.py  user.py
backend/auth_engine/: README.md
backend/auth_engine/api/: __init__.py  docs.py
backend/auth_engine/core/: __init__.py  config.py  engine.py  models.py  services.py
backend/auth_engine/middleware/: tenant.py
backend/auth_engine/models/: __init__.py  oauth.py  session.py  user.py
backend/auth_engine/providers/: __init__.py  base.py  registry.py
backend/daftgila/api/: __init__.py  admin.py  audit.py  config.py  crypto.py  gssapi.py  jwt.py  keytab_cache.py  model.py  oauth.py  user.py  utils.py
backend/daftgila/api/config/: __init__.py  schema.py
backend/gilla_auth/api/: __init__.py  config.py  gssapi.py  jwt.py  keytab_cache.py  model.py  oauth.py  user.py
backend/init/: 04-multi-tenant-support.sql
backend/tests/: __init__.py  test_package.py
chats/: auth-demo-application-stack.md  chat_export_01.md
client/: IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  example_usage.py  install.py  requirements.txt  setup.cfg  setup.py  test_client.py
client/daftgila/: __init__.py
client/daftgila/client/: __init__.py  admin.py  auth.py  client.py  config.py  exceptions.py  gssapi.py  http.py  jwt.py  response.py
demo/: Dockerfile  README.md  app.py  requirements.txt
demo/templates/: hello.html  login.html
frontend/: Dockerfile  README.md  REFACTORING_SUMMARY.md  app.py  requirements.txt  setup.cfg  setup.py
frontend/daftgila/web/: __init__.py  admin.py  auth.py  client_factory.py  config.py  dashboard.py  user.py  utils.py
frontend/daftgila/web/auth/: __init__.py  core.py  gssapi.py  oauth.py
frontend/daftgila/web/templates/: account.html  admin.html  base.html  config.html  dashboard.html  gssapi_realms.html  hello.html  jwt_sessions.html  login.html  oauth_providers.html  register.html
frontend/templates/: account.html  admin.html  base.html  config.html  dashboard.html  gssapi_login.html  hello.html  login.html  oauth_providers.html  register.html
init/: 01-init.sql  02-oauth-support.sql  03-add-scope-field.sql  03-jwt-sessions.sql  04-app-config.sql  05-gssapi-support.sql  06-auditing.sql  06-model-optimization.sql  07-data-migration.sql  README.md
nginx/: Dockerfile  nginx.conf
