# AI Auth Backend - Python Package Configuration
# Author: Christopher O'Brien <obriencj@gmail.com>
# Assisted-By: Cursor AI (Claude Sonnet 4)

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_auth_backend"
version = "0.1.0"
description = "A self-hosted, open-source authentication service"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Christopher O'Brien", email = "obriencj@gmail.com"}
]
keywords = ["authentication", "auth", "oauth", "jwt", "flask", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3.0",
    "Flask-SQLAlchemy>=3.0.0",
    "Flask-JWT-Extended>=4.5.0",
    "Flask-CORS>=4.0.0",
    "Flask-RESTX>=1.1.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "bcrypt>=4.0.0",
    "requests>=2.28.0",
    "gunicorn>=20.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-auth-backend"
Repository = "https://github.com/your-org/ai-auth-backend.git"
Issues = "https://github.com/your-org/ai-auth-backend/issues"
Documentation = "https://github.com/your-org/ai-auth-backend/docs"

[tool.setuptools.packages.find]
include = ["ai_auth_backend*"]

[tool.setuptools.package-data]
ai_auth_backend = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# The end.
