[metadata]
name = daftgila.client
version = 0.1.0
description = Object-oriented requests wrapper for DaftGila API
author = Christopher O'Brien
# O'Brien breaks a lot of tools
author_email = obriencj@gmail.com

license = GNU General Public License v3.0
license_files =
  LICENSE

long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/obriencj/ai-madness-auth-demo
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Security :: Authentication
  Topic :: Software Development :: Libraries :: Python Modules


[options]
packages =
  daftgila.client
  
python_requires = >=3.8
install_requires =
  requests>=2.25.0
  typing-extensions>=3.7.4;python_version<"3.8"


[options.extras_require]
dev =
  pytest>=6.0
  pytest-cov>=2.10
  black>=21.0
  flake8>=3.8
  mypy>=0.800

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[black]
line-length = 88
target-version = py38
