[metadata]
name = daftgila.web
version = 0.1.0
description = Daft Gila Authentication API

author = Christopher O'Brien
# O'Brien breaks a lot of tools
author_email = obriencj@gmail.com

license = GNU General Public License v3 (GPLv3)
license_files =
  LICENSE

long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages =
  daftgila.web
  daftgila.web.auth

include_package_data = True

zip_safe = False

install_requires =
  Flask==2.3.3
  requests==2.31.0
  gunicorn==21.2.0
  daftgila.client==0.1.0


[options.package_data]
daftgila.web =
  static/*
  templates/*


[tox:tox]
envlist = flake8,py{39,310,311}
skip_missing_interpreters = true


[testenv]
commands =
  python -B -m nose

deps =
  nose-py3

download = true


[testenv:flake8]
basepython = python3.9
commands =
  python -B -m flake8 preoccupied/daftgila/
deps =
  flake8
skip_install = true


[nosetests]
all-modules = 1
no-byte-compile = 1
verbosity = 2


[flake8]
ignore = E303,E731,E741,F401,F812,W504
filename = *.py
exclude =
  __pycache__
  .*
  build
  dist
  docs
  htmlcov
  setup.py
  tests
  *.egg-info


# The end.
